<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".GetDirections">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/tvFrom"
        android:text="@string/source" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFrom"
        android:layout_below="@+id/tvFrom"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:id="@+id/tvTo"
        android:layout_below="@+id/etFrom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTo"
        android:layout_below="@+id/tvTo"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionDone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directions"
        android:id="@+id/button"
        android:layout_below="@+id/etTo"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_gps"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="getDeviceGPSClick" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/button2"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvResult"
            android:layout_alignTop="@+id/scrollView"
            android:layout_alignParentStart="true" />
    </ScrollView>

</RelativeLayout>

